--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,7 @@ Maintainer: Luca Butikofer <lucabutikofer@gmail.com>
 Description: Functions to run LINGRA-N Tool, crop growth model for grassland
     productivity, plot results and run the grassland
     productivity meta-model described in Qi et al. 2018.
-License: EUPD (>= 1.1)
+License: EUPD
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
